[gd_scene load_steps=13 format=3 uid="uid://t8sono4advwa"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_5eyay"]
[ext_resource type="Script" path="res://components/input/player_input_component.gd" id="1_ndjuu"]
[ext_resource type="Script" path="res://components/movement/move_component.gd" id="2_36bhi"]
[ext_resource type="Script" path="res://components/movement/jump_component.gd" id="3_qxy82"]
[ext_resource type="Script" path="res://components/utility/inventory_component.gd" id="4_6xs5b"]
[ext_resource type="Script" path="res://components/utility/push_component.gd" id="5_fpcu1"]
[ext_resource type="Script" path="res://components/utility/attack_component.gd" id="6_ckekw"]
[ext_resource type="PackedScene" uid="uid://cjl6g56i2b8o7" path="res://components/utility/player_interact_component/player_interact_component.tscn" id="7_ce0qx"]
[ext_resource type="Script" path="res://components/augment_components/augment_manager_component.gd" id="8_bsj0i"]
[ext_resource type="PackedScene" uid="uid://0iabl60bscqx" path="res://components/utility/aim_component/aim_component.tscn" id="8_db6ne"]
[ext_resource type="Resource" uid="uid://b7yjvcr06lap7" path="res://items/augments/spring_tendons/spring_tendons.tres" id="9_u81g4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cfpqj"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("input_comp", "move_comp", "jump_comp", "push_comp")]
collision_mask = 282
script = ExtResource("1_5eyay")
input_comp = NodePath("Controllers/PlayerInputComponent")
move_comp = NodePath("Movement/MoveComponent")
jump_comp = NodePath("Movement/JumpComponent")
push_comp = NodePath("Utility/PushComponent")

[node name="Controllers" type="Node" parent="."]

[node name="PlayerInputComponent" type="Node" parent="Controllers" node_paths=PackedStringArray("head", "height_ray")]
script = ExtResource("1_ndjuu")
head = NodePath("../../Head")
height_ray = NodePath("../../HeightRayCast")

[node name="Movement" type="Node" parent="."]

[node name="MoveComponent" type="Node" parent="Movement" node_paths=PackedStringArray("parent", "input_comp")]
script = ExtResource("2_36bhi")
parent = NodePath("../..")
input_comp = NodePath("../../Controllers/PlayerInputComponent")

[node name="JumpComponent" type="Node" parent="Movement" node_paths=PackedStringArray("parent", "input_comp")]
script = ExtResource("3_qxy82")
parent = NodePath("../..")
input_comp = NodePath("../../Controllers/PlayerInputComponent")

[node name="Utility" type="Node" parent="."]

[node name="InventoryComponent" type="Node" parent="Utility" node_paths=PackedStringArray("parent", "input_comp", "hand")]
script = ExtResource("4_6xs5b")
parent = NodePath("../..")
input_comp = NodePath("../../Controllers/PlayerInputComponent")
hand = NodePath("../../Head/Camera/Hand")
max_slots = 2

[node name="AttackComponent" type="Node" parent="Utility" node_paths=PackedStringArray("input_comp", "inv_comp", "aim_comp")]
script = ExtResource("6_ckekw")
input_comp = NodePath("../../Controllers/PlayerInputComponent")
inv_comp = NodePath("../InventoryComponent")
aim_comp = NodePath("../../Head/Camera/AimComponent")

[node name="PushComponent" type="Node" parent="Utility" node_paths=PackedStringArray("parent")]
script = ExtResource("5_fpcu1")
parent = NodePath("../..")

[node name="AugmentManagerComponent" type="Node" parent="Utility" node_paths=PackedStringArray("parent")]
script = ExtResource("8_bsj0i")
parent = NodePath("../..")
augment_dict = {
"ARMS": null,
"BODY": null,
"HEAD": null,
"LEGS": ExtResource("9_u81g4")
}

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_cfpqj")

[node name="Head" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.608581, 0)

[node name="AimComponent" parent="Head/Camera" instance=ExtResource("8_db6ne")]

[node name="PlayerInteractComponent" parent="Head/Camera" node_paths=PackedStringArray("parent", "player_input_comp") instance=ExtResource("7_ce0qx")]
parent = NodePath("../../..")
player_input_comp = NodePath("../../../Controllers/PlayerInputComponent")

[node name="Hand" type="Node3D" parent="Head/Camera"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.395782, -0.295732, -0.835098)

[node name="HeightRayCast" type="RayCast3D" parent="."]
transform = Transform3D(-1, 1.74846e-07, 0, -8.74228e-08, -2, 0, 0, 0, 1, 0, 0, 0)
collision_mask = 16
